[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
authors = ["Samuel MARLHENS <samuel.marlhens@proton.me>"]
license = "BlueOak-1.0.0"

[workspace.lints.clippy]
pedantic = "deny"
dbg_macro = "deny"
empty_structs_with_brackets = "deny"
float_cmp_const = "deny"
if_then_some_else_none = "deny"
same_name_method = "deny"
tests_outside_test_module = "deny"
unseparated_literal_suffix = "deny"
unwrap_used = "deny"

[workspace.dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4.6.1", features = ["derive"] }
comfy-table = "7.2.2"
console = "0.16.3"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
serde-saphyr = "0.0.27"
tracing = "0.1.44"
thiserror = "2.0.18"
tracing-subscriber = "0.3.23"

# napi
napi = { version = "3.9.0", default-features = false, features = ["napi6", "serde-json"] }
napi-derive = { version = "3.5.6", features = ["type-def"] }
napi-build = "2.3.2"

# test infrastructure
criterion = { version = "0.8.2", features = ["html_reports"] }
insta = "1.47.2"
rstest = "0.26.1"
tempfile = "3.27.0"

# workspace internal
riri-find-up = { path = "crates/riri-find-up", version = "0.0.0" }
riri-common = { path = "crates/riri-common", version = "0.0.0" }
riri-npm = { path = "crates/riri-npm", version = "0.0.0" }
riri-pnpm = { path = "crates/riri-pnpm", version = "0.0.0" }
riri-yarn = { path = "crates/riri-yarn", version = "0.0.0" }
riri-bun = { path = "crates/riri-bun", version = "0.0.0" }
riri-semver-range = { path = "crates/riri-semver-range", version = "0.0.0" }
riri-nce = { path = "crates/riri-nce", version = "0.0.0", default-features = false }
riri-napi-nce = { path = "crates/riri-napi-nce", version = "1.2.0" }
riri-napi-npd = { path = "crates/riri-napi-npd", version = "0.0.0" }
riri-node-lifecycle = { path = "crates/riri-node-lifecycle", version = "0.0.0" }
riri-npd = { path = "crates/riri-npd", version = "0.0.0" }
riri-task-runner = { path = "crates/riri-task-runner", version = "0.0.0" }
riri-workspace = { path = "crates/riri-workspace", version = "0.0.0" }
