[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
authors = ["Samuel MARLHENS <samuel.marlhens@proton.me>"]
license = "BlueOak-1.0.0"
repository = "https://github.com/smarlhens/riri-node-tools"

[workspace.lints.clippy]
pedantic = "deny"
dbg_macro = "deny"
empty_structs_with_brackets = "deny"
float_cmp_const = "deny"
if_then_some_else_none = "deny"
same_name_method = "deny"
tests_outside_test_module = "deny"
unseparated_literal_suffix = "deny"
unwrap_used = "deny"

[workspace.dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std", "serde"] }
clap = { version = "4.6.1", features = ["derive"] }
comfy-table = "7.2.2"
console = "0.16.3"
semver = "1.0.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["preserve_order"] }
serde-saphyr = "0.0.28"
smallvec = "1.15.2"
tracing = "0.1.44"
thiserror = "2.0.18"
tracing-subscriber = "0.3.23"
ureq = "3.3.0"

# napi
napi = { version = "3.9.3", default-features = false, features = ["napi6", "serde-json"] }
napi-derive = { version = "3.5.6", features = ["type-def"] }
napi-build = "2.3.2"

# test infrastructure
criterion = { version = "0.8.2", features = ["html_reports"] }
insta = "1.48.0"
rstest = "0.26.1"
tempfile = "3.27.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

# cargo-dist build profile
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.metadata.dist]
cargo-dist-version = "0.32.0"
ci = "github"
installers = ["shell", "powershell"]
targets = [
    "aarch64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "aarch64-unknown-linux-musl",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
    "x86_64-pc-windows-msvc",
]
packages = ["riri-nce", "riri-npd", "riri-ncd"]
precise-builds = true
pr-run-mode = "skip"
install-path = "CARGO_HOME"
install-updater = false
dispatch-releases = true
allow-dirty = ["ci"]
