[package]
name = "parser"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license-file.workspace = true

[dependencies]
definitely-typed = { path = "../definitely-typed" }
serde_json = { version = "1.0.113", features = ["preserve_order"] }
serde_yaml = "0.9.31"
regex = "1.10.3"
detect-indent = "0.1.0"

[lints]
workspace = true
