[package]
name = "pin-dependencies"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license-file.workspace = true

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
comfy-table = "7.1.0"
console = "0.15.8"
definitely-typed = { path = "../definitely-typed" }
finder = { path = "../finder" }
parser = { path = "../parser" }
semver = "1.0.21"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[lints]
workspace = true
