[package]
name = "pin-dependencies"
version = "0.1.0"
edition = "2021"
authors.workspace = true
license-file.workspace = true

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
clap-verbosity-flag = "2.1.2"
comfy-table = "7.1.0"
console = "0.15.8"
definitely-typed = { path = "../definitely-typed" }
detect-indent = "0.1.0"
finder = { path = "../finder" }
parser = { path = "../parser" }
semver = "1.0.21"
serde = "1.0.196"
serde_json = "1.0.113"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"
log = "0.4.20"

[lints]
workspace = true
