[package]
name = "riri-common"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
sort = ["sort-package-json"]

[dependencies]
detect-indent = { workspace = true }
riri-find-up = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sort-package-json = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3.19.1"

[lints]
workspace = true
