[package]
name = "riri-common"
version = "0.1.3"
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
sort = ["sort-package-json"]
graph = []

[dependencies]
detect-indent = "0.1.0"
riri-find-up = { path = "../riri-find-up", version = "0.1.1" }
serde = { workspace = true }
serde_json = { workspace = true }
sort-package-json = { version = "0.0.14", optional = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
