[package]
name = "riri-napi-ncd"
version = "0.1.2"
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
riri-ncd = { path = "../riri-ncd", version = "0.1.2" }

[build-dependencies]
napi-build = { workspace = true }

[lints]
workspace = true
