[package]
name = "riri-napi-nce"
version = "1.2.1"
description = "Check and update Node.js engine constraints in package.json"
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
riri-common = { workspace = true }
riri-nce = { workspace = true }
riri-npm = { workspace = true }
riri-pnpm = { workspace = true }
riri-semver-range = { workspace = true }
semver = { workspace = true }
riri-yarn = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }

[lints]
workspace = true
