[package]
name = "riri-napi-nce"
version = "1.3.1"
description = "Check and update Node.js engine constraints in package.json"
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
riri-common = { path = "../riri-common", version = "0.1.4" }
riri-nce = { path = "../riri-nce", version = "0.1.5", default-features = false }
riri-npm = { path = "../riri-npm", version = "0.1.4" }
riri-pnpm = { path = "../riri-pnpm", version = "0.1.4" }
riri-semver-range = { path = "../riri-semver-range", version = "0.1.2" }
semver = { workspace = true }
riri-yarn = { path = "../riri-yarn", version = "0.1.4" }
serde_json = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }

[lints]
workspace = true
