[package]
name = "riri-napi-npd"
version = "1.0.1"
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
riri-common = { path = "../riri-common", version = "0.1.1" }
riri-npd = { path = "../riri-npd", version = "0.1.1" }
riri-npm = { path = "../riri-npm", version = "0.1.1" }
riri-pnpm = { path = "../riri-pnpm", version = "0.1.1" }
serde_json = { workspace = true }

[build-dependencies]
napi-build = { workspace = true }

[lints]
workspace = true
