[package]
name = "riri-napi"
version = "1.0.0-rc.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { workspace = true }
napi-derive = { workspace = true }
riri-common = { workspace = true }
riri-nce = { workspace = true }
riri-npm = { workspace = true }
riri-pnpm = { workspace = true }
riri-semver-range = { workspace = true }
semver = { workspace = true }
riri-yarn = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
napi-build = "2.3.1"

[lints]
workspace = true
