[package]
name = "riri-nce"
version = "0.0.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
riri-common = { workspace = true, features = ["sort"] }
riri-node-lifecycle = { workspace = true }
riri-npm = { workspace = true }
riri-pnpm = { workspace = true }
riri-semver-range = { workspace = true }
riri-yarn = { workspace = true }
riri-task-runner = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
console = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[features]
default = ["refresh"]
refresh = ["riri-node-lifecycle/refresh"]

[dev-dependencies]
criterion = { workspace = true }
dhat = "0.3.3"
insta = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "check_engines"
harness = false

[lints]
workspace = true
