[package]
name = "riri-nce"
version = "0.1.4"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "nce"
path = "src/bin/nce.rs"

[[bin]]
name = "npm-check-engines"
path = "src/bin/npm-check-engines.rs"

[dependencies]
riri-common = { path = "../riri-common", version = "0.1.3", features = ["sort"] }
riri-node-lifecycle = { path = "../riri-node-lifecycle", version = "0.1.2" }
riri-npm = { path = "../riri-npm", version = "0.1.3" }
riri-pnpm = { path = "../riri-pnpm", version = "0.1.3" }
riri-semver-range = { path = "../riri-semver-range", version = "0.1.2" }
riri-yarn = { path = "../riri-yarn", version = "0.1.3", features = ["scan"] }
riri-task-runner = { path = "../riri-task-runner", version = "0.1.1" }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
console = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[features]
default = ["refresh"]
refresh = ["riri-node-lifecycle/refresh"]

[dev-dependencies]
criterion = { workspace = true }
dhat = "0.3.3"
insta = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "check_engines"
harness = false

[lints]
workspace = true
