[package]
name = "riri-npd"
version = "0.1.4"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "npd"
path = "src/bin/npd.rs"

[[bin]]
name = "npm-pin-dependencies"
path = "src/bin/npm-pin-dependencies.rs"

[dependencies]
riri-common = { path = "../riri-common", version = "0.1.4", features = ["sort"] }
riri-npm = { path = "../riri-npm", version = "0.1.4" }
riri-pnpm = { path = "../riri-pnpm", version = "0.1.4", features = ["catalog"] }
riri-task-runner = { path = "../riri-task-runner", version = "0.1.2" }
riri-workspace = { path = "../riri-workspace", version = "0.1.4" }
riri-yarn = { path = "../riri-yarn", version = "0.1.4" }
anyhow = { workspace = true }
clap = { workspace = true }
comfy-table = { workspace = true }
console = { workspace = true }
semver = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }

[dev-dependencies]
criterion = { workspace = true }
insta = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "pin_dependencies"
harness = false

[lints]
workspace = true
