[package]
name = "riri-npm"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
riri-types = { workspace = true }
anyhow = { workspace = true }
detect-indent = { workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }

[lints]
workspace = true
