[package]
name = "riri-npm"
version = "0.1.3"
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
graph = ["riri-common/graph"]

[dependencies]
riri-common = { path = "../riri-common", version = "0.1.3" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
rstest = { workspace = true }

[lints]
workspace = true
