[package]
name = "riri-pnpm"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
riri-common = { path = "../riri-common", version = "0.1.1" }
riri-find-up = { path = "../riri-find-up", version = "0.1.1" }
serde = { workspace = true }
serde-saphyr = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
