[package]
name = "riri-pnpm"
version = "0.1.4"
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
graph = ["riri-common/graph"]
catalog = ["dep:riri-find-up"]

[dependencies]
riri-common = { path = "../riri-common", version = "0.1.4" }
riri-find-up = { path = "../riri-find-up", version = "0.1.1", optional = true }
serde = { workspace = true }
serde-saphyr = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
