[package]
name = "riri-semver-range"
version = "0.1.2"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
semver = { workspace = true }
smallvec = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
nodejs-semver = "5.0.0"
proptest = "1.11.0"

[[bench]]
name = "range_parsing"
harness = false

[[bench]]
name = "range_parsing_breakdown"
harness = false

[[bench]]
name = "range_satisfies"
harness = false

[[bench]]
name = "range_intersection"
harness = false

[[bench]]
name = "range_humanize"
harness = false

[lints]
workspace = true
