[package]
name = "riri-workspace"
version = "0.1.4"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
riri-common = { path = "../riri-common", version = "0.1.4" }
riri-find-up = { path = "../riri-find-up", version = "0.1.1" }
serde = { workspace = true }
serde_json = { workspace = true }
serde-saphyr = { workspace = true }
globset = "0.4.19"
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
