[package]
name = "riri-yarn"
version = "0.1.2"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
riri-common = { path = "../riri-common", version = "0.1.2" }
serde = { workspace = true }
serde_json = { workspace = true }
serde-saphyr = { workspace = true }
thiserror = { workspace = true }
walkdir = "2.5.0"

[dev-dependencies]
insta = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
