[package]
name = "riri-yarn"
version = "0.1.4"
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
graph = ["riri-common/graph"]
scan = ["dep:walkdir"]

[dependencies]
riri-common = { path = "../riri-common", version = "0.1.4" }
serde = { workspace = true }
serde_json = { workspace = true }
serde-saphyr = { workspace = true }
thiserror = { workspace = true }
walkdir = { version = "2.5.0", optional = true }

[dev-dependencies]
insta = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
