[package]
name = "xtask"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
riri-node-lifecycle = { workspace = true, features = ["refresh"] }
serde_json = { workspace = true }
similar = "3.1.1"
tera = { workspace = true }

[lib]
path = "src/lib.rs"

[[bin]]
name = "xtask"
path = "src/main.rs"

[lints]
workspace = true
