[package]
name = "xtask"
version = "0.1.3"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
riri-node-lifecycle = { path = "../riri-node-lifecycle", version = "0.1.3", features = ["refresh"] }
serde_json = { workspace = true }
similar = "3.1.1"
tera = { version = "2.0.0", default-features = false }

[lib]
path = "src/lib.rs"

[[bin]]
name = "xtask"
path = "src/main.rs"

[lints]
workspace = true
